Fixed Draft Year wrapping on mobile

--- a/client/src/ProspectFilter.css
+++ b/client/src/ProspectFilter.css
@@ -17,13 +17,13 @@
   width: 110px;
 }
 
-.label {
-  flex: 1 1 50%;
+label {
+  flex: 1 1 70%;
 }
 
 @media only screen and (max-width: 1000px) {
   .filter label {
-    flex: 0 1 50%;
+    flex: 1 1 50%;
   }
 
   .filter-container {
@@ -31,7 +31,11 @@
     justify-content: center;
   }
 
+  .label-container {
+    font-size: 12px;
+  }
+
   .filter {
-    width: 60%;
+    width: 80%;
   }
 }
